# HADE

./: .env.example  .gitignore  CLAUDE.md  HADE_Operating_Context.md  docker-compose.yml  package-lock.json  railway.json  vercel.json
backend/: .env.example  Procfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: analytics.py  auth.py  decide.py  deps.py  events.py  guest_migration.py  moments.py  signals.py  sync.py  users.py  venues.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/models/: __init__.py  business_account.py  context_state.py  micro_event.py  moment.py  opportunity.py  signal.py  trust_score.py  user.py  venue.py
backend/app/schemas/: analytics.py  candidate.py  common.py  context_state.py  decide.py  event.py  moment.py  signal.py  user.py  venue.py
backend/app/services/: context_engine.py  decision_layer.py  google_places.py  llm_decision.py  metrics.py  scoring.py  signal_aggregator.py  trust.py  trust_layer.py
backend/app/workers/: celery_app.py  event_lifecycle.py  signal_decay.py  trust_recompute.py
backend/migrations/: env.py
backend/migrations/sql/: 20260306_align_signaltype.sql  migrate_guest_session.sql  on_auth_user_created.sql
backend/migrations/versions/: 0069f1fa59b6_add_username_to_users.py  28fd1e9ca771_align_signaltype_with_cloud.py  a1b2c3d4e5f6_align_user_id_with_auth.py  a74b9a10cd37_initial_schema.py  b2c3d4e5f6g7_drop_supabase_id.py  d34cbc7b6202_add_phone_column_to_users.py  (+4 more)
backend/scripts/: seed_ghost_signals.py
backend/tests/: test_signals.py
(+93 files in other folders)
